# OCR_bulk_scanner

./: .env.production  .gitignore  Dockerfile  LICENSE  MONGODB_INTEGRATION_COMPLETE.md  PRODUCTION_SETUP.md  README.md  deploy.sh  docker-compose.yml  main.py  monitor.py  nginx.conf  output.xlsx  pyproject.toml  requirements.txt  requirements_local.txt  setup.sh  start_production.sh  supervisor.conf
app/: __init__.py  config.py  mongo.py  ocr.py  routes.py  routes_new.py  routes_old.py  utils.py
on_system/linux/: setup_local.sh
on_system/windows/: run_ocr_scanner.bat  setup_local.bat
static/css/: style.css
static/js/: api.js  manage.js  script.js
static/results/: data.json  output.xlsx
static/uploads/: .gitkeep
templates/: api_docs.html  index.html  manage.html  manage_fixed.html  results.html
