[project]
name = "ocr-scanner-script"
version = "0.1.0"
description = "Flask web application for OCR-based visiting card data extraction"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "Flask>=3.0.0",
    "Werkzeug>=3.0.1",
    "Pillow>=10.1.0",
    "python-dotenv>=1.0.0",
    "openpyxl>=3.1.5",
    "requests>=2.32.4",
    "pymongo>=4.13.2",
]
